crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__select-100-light-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind                                                                                              |
|behind                                                                                              |
|behind              ┌ switch · api ─────────────────────────────────────── esc ┐                    |
|behind              │                                                          │                    |
|behind              │  search   cl                                             │                    |
|behind              │                                                          │                    |
|behind              │  same provider · conversation continues                  │                    |
|behind              │   ● claude-main                                  5h 38%  │                    |
|behind              │ ▶ ○ claude-alt                                    5h 4%  │                    |
|behind              │                                                          │                    |
|behind              │  other provider · replays the transcript                 │                    |
|behind              │   ○ codex-work                                  day 91%  │                    |
|behind              │                                                          │                    |
|behind              │  model: opus                                             │                    |
|behind              │                                                          │                    |
|behind              │  enter switch  esc close                                 │                    |
|behind              │                                                          │                    |
|behind              └──────────────────────────────────────────────────────────┘                    |
|behind                                                                                              |
|behind                                                                                              |

 0   0..100 fg=#6b6f7a bg=#ffffff
 1   0..100 fg=#6b6f7a bg=#ffffff
 2   0..20  fg=#6b6f7a bg=#ffffff
 2  20..22  fg=#f6f7f9 bg=#f6f7f9
 2  22..34  fg=#1c1c1c bg=#f6f7f9 BOLD
 2  34..74  fg=#f6f7f9 bg=#f6f7f9
 2  74..79  fg=#6b6f7a bg=#f6f7f9
 2  79..80  fg=#f6f7f9 bg=#f6f7f9
 2  80..100 fg=#6b6f7a bg=#ffffff
 3   0..20  fg=#6b6f7a bg=#ffffff
 3  20..21  fg=#f6f7f9 bg=#f6f7f9
 3  21..79  fg=#1c1c1c bg=#f6f7f9
 3  79..80  fg=#f6f7f9 bg=#f6f7f9
 3  80..100 fg=#6b6f7a bg=#ffffff
 4   0..20  fg=#6b6f7a bg=#ffffff
 4  20..21  fg=#f6f7f9 bg=#f6f7f9
 4  21..23  fg=#1c1c1c bg=#f6f7f9
 4  23..29  fg=#2f5bb7 bg=#f6f7f9 BOLD
 4  29..31  fg=#1c1c1c bg=#f6f7f9
 4  31..32  fg=#1c1c1c bg=#eceef2
 4  32..33  fg=#1c1c1c bg=#eceef2 REVERSED
 4  33..77  fg=#1c1c1c bg=#eceef2
 4  77..79  fg=#1c1c1c bg=#f6f7f9
 4  79..80  fg=#f6f7f9 bg=#f6f7f9
 4  80..100 fg=#6b6f7a bg=#ffffff
 5   0..20  fg=#6b6f7a bg=#ffffff
 5  20..21  fg=#f6f7f9 bg=#f6f7f9
 5  21..79  fg=#1c1c1c bg=#f6f7f9
 5  79..80  fg=#f6f7f9 bg=#f6f7f9
 5  80..100 fg=#6b6f7a bg=#ffffff
 6   0..20  fg=#6b6f7a bg=#ffffff
 6  20..21  fg=#f6f7f9 bg=#f6f7f9
 6  21..23  fg=#1c1c1c bg=#f6f7f9
 6  23..61  fg=#1c1c1c bg=#f6f7f9 BOLD
 6  61..79  fg=#1c1c1c bg=#f6f7f9
 6  79..80  fg=#f6f7f9 bg=#f6f7f9
 6  80..100 fg=#6b6f7a bg=#ffffff
 7   0..20  fg=#6b6f7a bg=#ffffff
 7  20..21  fg=#f6f7f9 bg=#f6f7f9
 7  21..22  fg=#1c1c1c bg=#f6f7f9
 7  22..23  fg=#2f5bb7 bg=#f6f7f9
 7  23..24  fg=#1c1c1c bg=#f6f7f9
 7  24..25  fg=#a86b00 bg=#f6f7f9
 7  25..71  fg=#1c1c1c bg=#f6f7f9
 7  71..77  fg=#6b6f7a bg=#f6f7f9
 7  77..79  fg=#1c1c1c bg=#f6f7f9
 7  79..80  fg=#f6f7f9 bg=#f6f7f9
 7  80..100 fg=#6b6f7a bg=#ffffff
 8   0..20  fg=#6b6f7a bg=#ffffff
 8  20..21  fg=#f6f7f9 bg=#f6f7f9
 8  21..22  fg=#1c1c1c bg=#f6f7f9
 8  22..23  fg=#2f5bb7 bg=#eceef2
 8  23..24  fg=#1c1c1c bg=#eceef2
 8  24..25  fg=#6b6f7a bg=#eceef2 BOLD
 8  25..36  fg=#1c1c1c bg=#eceef2 BOLD
 8  36..72  fg=#1c1c1c bg=#eceef2
 8  72..77  fg=#6b6f7a bg=#eceef2
 8  77..78  fg=#1c1c1c bg=#eceef2
 8  78..79  fg=#1c1c1c bg=#f6f7f9
 8  79..80  fg=#f6f7f9 bg=#f6f7f9
 8  80..100 fg=#6b6f7a bg=#ffffff
 9   0..20  fg=#6b6f7a bg=#ffffff
 9  20..21  fg=#f6f7f9 bg=#f6f7f9
 9  21..79  fg=#1c1c1c bg=#f6f7f9
 9  79..80  fg=#f6f7f9 bg=#f6f7f9
 9  80..100 fg=#6b6f7a bg=#ffffff
10   0..20  fg=#6b6f7a bg=#ffffff
10  20..21  fg=#f6f7f9 bg=#f6f7f9
10  21..23  fg=#1c1c1c bg=#f6f7f9
10  23..62  fg=#1c1c1c bg=#f6f7f9 BOLD
10  62..79  fg=#1c1c1c bg=#f6f7f9
10  79..80  fg=#f6f7f9 bg=#f6f7f9
10  80..100 fg=#6b6f7a bg=#ffffff
11   0..20  fg=#6b6f7a bg=#ffffff
11  20..21  fg=#f6f7f9 bg=#f6f7f9
11  21..22  fg=#1c1c1c bg=#f6f7f9
11  22..23  fg=#2f5bb7 bg=#f6f7f9
11  23..24  fg=#1c1c1c bg=#f6f7f9
11  24..25  fg=#6b6f7a bg=#f6f7f9
11  25..70  fg=#1c1c1c bg=#f6f7f9
11  70..77  fg=#6b6f7a bg=#f6f7f9
11  77..79  fg=#1c1c1c bg=#f6f7f9
11  79..80  fg=#f6f7f9 bg=#f6f7f9
11  80..100 fg=#6b6f7a bg=#ffffff
12   0..20  fg=#6b6f7a bg=#ffffff
12  20..21  fg=#f6f7f9 bg=#f6f7f9
12  21..79  fg=#1c1c1c bg=#f6f7f9
12  79..80  fg=#f6f7f9 bg=#f6f7f9
12  80..100 fg=#6b6f7a bg=#ffffff
13   0..20  fg=#6b6f7a bg=#ffffff
13  20..21  fg=#f6f7f9 bg=#f6f7f9
13  21..23  fg=#1c1c1c bg=#f6f7f9
13  23..77  fg=#6b6f7a bg=#f6f7f9
13  77..79  fg=#1c1c1c bg=#f6f7f9
13  79..80  fg=#f6f7f9 bg=#f6f7f9
13  80..100 fg=#6b6f7a bg=#ffffff
14   0..20  fg=#6b6f7a bg=#ffffff
14  20..21  fg=#f6f7f9 bg=#f6f7f9
14  21..79  fg=#1c1c1c bg=#f6f7f9
14  79..80  fg=#f6f7f9 bg=#f6f7f9
14  80..100 fg=#6b6f7a bg=#ffffff
15   0..20  fg=#6b6f7a bg=#ffffff
15  20..21  fg=#f6f7f9 bg=#f6f7f9
15  21..23  fg=#1c1c1c bg=#f6f7f9
15  23..28  fg=#1c1c1c bg=#f6f7f9 BOLD
15  28..35  fg=#6b6f7a bg=#f6f7f9
15  35..37  fg=#1c1c1c bg=#f6f7f9
15  37..40  fg=#1c1c1c bg=#f6f7f9 BOLD
15  40..46  fg=#6b6f7a bg=#f6f7f9
15  46..79  fg=#1c1c1c bg=#f6f7f9
15  79..80  fg=#f6f7f9 bg=#f6f7f9
15  80..100 fg=#6b6f7a bg=#ffffff
16   0..20  fg=#6b6f7a bg=#ffffff
16  20..21  fg=#f6f7f9 bg=#f6f7f9
16  21..79  fg=#1c1c1c bg=#f6f7f9
16  79..80  fg=#f6f7f9 bg=#f6f7f9
16  80..100 fg=#6b6f7a bg=#ffffff
17   0..20  fg=#6b6f7a bg=#ffffff
17  20..80  fg=#f6f7f9 bg=#f6f7f9
17  80..100 fg=#6b6f7a bg=#ffffff
18   0..100 fg=#6b6f7a bg=#ffffff
19   0..100 fg=#6b6f7a bg=#ffffff
