crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__select-45-ansi-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind                                       |
|behind                                       |
|┌ switch · api ──────────────────────── esc ┐|
|│                                           │|
|│  search   cl                              │|
|│                                           │|
|│  same provider · conversation continues   │|
|│   ● claude-main                   5h 38%  │|
|│ ▶ ○ claude-alt                     5h 4%  │|
|│                                           │|
|│  other provider · replays the transcript  │|
|│   ○ codex-work                   day 91%  │|
|│                                           │|
|│  model: opus                              │|
|│                                           │|
|│  enter switch  esc close                  │|
|│                                           │|
|└───────────────────────────────────────────┘|
|behind                                       |
|behind                                       |

 0   0..45  fg=DarkGray bg=Reset
 1   0..45  fg=DarkGray bg=Reset
 2   0..2   fg=DarkGray bg=Reset
 2   2..14  fg=Reset bg=Reset BOLD
 2  14..45  fg=DarkGray bg=Reset
 3   0..1   fg=DarkGray bg=Reset
 3   1..44  fg=Reset bg=Reset
 3  44..45  fg=DarkGray bg=Reset
 4   0..1   fg=DarkGray bg=Reset
 4   1..3   fg=Reset bg=Reset
 4   3..9   fg=Cyan bg=Reset BOLD
 4   9..12  fg=Reset bg=Reset
 4  12..13  fg=Reset bg=Reset REVERSED
 4  13..44  fg=Reset bg=Reset
 4  44..45  fg=DarkGray bg=Reset
 5   0..1   fg=DarkGray bg=Reset
 5   1..44  fg=Reset bg=Reset
 5  44..45  fg=DarkGray bg=Reset
 6   0..1   fg=DarkGray bg=Reset
 6   1..3   fg=Reset bg=Reset
 6   3..41  fg=Reset bg=Reset BOLD
 6  41..44  fg=Reset bg=Reset
 6  44..45  fg=DarkGray bg=Reset
 7   0..1   fg=DarkGray bg=Reset
 7   1..2   fg=Reset bg=Reset
 7   2..3   fg=Cyan bg=Reset
 7   3..4   fg=Reset bg=Reset
 7   4..5   fg=Yellow bg=Reset
 7   5..36  fg=Reset bg=Reset
 7  36..42  fg=DarkGray bg=Reset
 7  42..44  fg=Reset bg=Reset
 7  44..45  fg=DarkGray bg=Reset
 8   0..1   fg=DarkGray bg=Reset
 8   1..2   fg=Reset bg=Reset
 8   2..3   fg=Cyan bg=Reset
 8   3..4   fg=Reset bg=Reset
 8   4..5   fg=DarkGray bg=Reset BOLD
 8   5..16  fg=Reset bg=Reset BOLD
 8  16..37  fg=Reset bg=Reset
 8  37..42  fg=DarkGray bg=Reset
 8  42..44  fg=Reset bg=Reset
 8  44..45  fg=DarkGray bg=Reset
 9   0..1   fg=DarkGray bg=Reset
 9   1..44  fg=Reset bg=Reset
 9  44..45  fg=DarkGray bg=Reset
10   0..1   fg=DarkGray bg=Reset
10   1..3   fg=Reset bg=Reset
10   3..42  fg=Reset bg=Reset BOLD
10  42..44  fg=Reset bg=Reset
10  44..45  fg=DarkGray bg=Reset
11   0..1   fg=DarkGray bg=Reset
11   1..2   fg=Reset bg=Reset
11   2..3   fg=Cyan bg=Reset
11   3..4   fg=Reset bg=Reset
11   4..5   fg=DarkGray bg=Reset
11   5..35  fg=Reset bg=Reset
11  35..42  fg=DarkGray bg=Reset
11  42..44  fg=Reset bg=Reset
11  44..45  fg=DarkGray bg=Reset
12   0..1   fg=DarkGray bg=Reset
12   1..44  fg=Reset bg=Reset
12  44..45  fg=DarkGray bg=Reset
13   0..1   fg=DarkGray bg=Reset
13   1..3   fg=Reset bg=Reset
13   3..42  fg=DarkGray bg=Reset
13  42..44  fg=Reset bg=Reset
13  44..45  fg=DarkGray bg=Reset
14   0..1   fg=DarkGray bg=Reset
14   1..44  fg=Reset bg=Reset
14  44..45  fg=DarkGray bg=Reset
15   0..1   fg=DarkGray bg=Reset
15   1..3   fg=Reset bg=Reset
15   3..8   fg=Reset bg=Reset BOLD
15   8..15  fg=DarkGray bg=Reset
15  15..17  fg=Reset bg=Reset
15  17..20  fg=Reset bg=Reset BOLD
15  20..26  fg=DarkGray bg=Reset
15  26..44  fg=Reset bg=Reset
15  44..45  fg=DarkGray bg=Reset
16   0..1   fg=DarkGray bg=Reset
16   1..44  fg=Reset bg=Reset
16  44..45  fg=DarkGray bg=Reset
17   0..45  fg=DarkGray bg=Reset
18   0..45  fg=DarkGray bg=Reset
19   0..45  fg=DarkGray bg=Reset
