crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__select-45-dark-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind                                       |
|behind                                       |
|┌ switch · api ──────────────────────── esc ┐|
|│                                           │|
|│  search   cl                              │|
|│                                           │|
|│  same provider · conversation continues   │|
|│   * claude-main                   5h 38%  │|
|│ > o claude-alt                     5h 4%  │|
|│                                           │|
|│  other provider · replays the transcript  │|
|│   o codex-work                   day 91%  │|
|│                                           │|
|│  model: opus                              │|
|│                                           │|
|│  enter switch  esc close                  │|
|│                                           │|
|└───────────────────────────────────────────┘|
|behind                                       |
|behind                                       |

 0   0..45  fg=#7f8492 bg=#111216
 1   0..45  fg=#7f8492 bg=#111216
 2   0..2   fg=#181a20 bg=#181a20
 2   2..14  fg=#e6e6e6 bg=#181a20 BOLD
 2  14..39  fg=#181a20 bg=#181a20
 2  39..44  fg=#7f8492 bg=#181a20
 2  44..45  fg=#181a20 bg=#181a20
 3   0..1   fg=#181a20 bg=#181a20
 3   1..44  fg=#e6e6e6 bg=#181a20
 3  44..45  fg=#181a20 bg=#181a20
 4   0..1   fg=#181a20 bg=#181a20
 4   1..3   fg=#e6e6e6 bg=#181a20
 4   3..9   fg=#7aa2f7 bg=#181a20 BOLD
 4   9..11  fg=#e6e6e6 bg=#181a20
 4  11..12  fg=#e6e6e6 bg=#21242c
 4  12..13  fg=#e6e6e6 bg=#21242c REVERSED
 4  13..42  fg=#e6e6e6 bg=#21242c
 4  42..44  fg=#e6e6e6 bg=#181a20
 4  44..45  fg=#181a20 bg=#181a20
 5   0..1   fg=#181a20 bg=#181a20
 5   1..44  fg=#e6e6e6 bg=#181a20
 5  44..45  fg=#181a20 bg=#181a20
 6   0..1   fg=#181a20 bg=#181a20
 6   1..3   fg=#e6e6e6 bg=#181a20
 6   3..41  fg=#e6e6e6 bg=#181a20 BOLD
 6  41..44  fg=#e6e6e6 bg=#181a20
 6  44..45  fg=#181a20 bg=#181a20
 7   0..1   fg=#181a20 bg=#181a20
 7   1..2   fg=#e6e6e6 bg=#181a20
 7   2..3   fg=#7aa2f7 bg=#181a20
 7   3..4   fg=#e6e6e6 bg=#181a20
 7   4..5   fg=#e0af68 bg=#181a20
 7   5..36  fg=#e6e6e6 bg=#181a20
 7  36..42  fg=#7f8492 bg=#181a20
 7  42..44  fg=#e6e6e6 bg=#181a20
 7  44..45  fg=#181a20 bg=#181a20
 8   0..1   fg=#181a20 bg=#181a20
 8   1..2   fg=#e6e6e6 bg=#181a20
 8   2..3   fg=#7aa2f7 bg=#21242c
 8   3..4   fg=#e6e6e6 bg=#21242c
 8   4..16  fg=#e6e6e6 bg=#21242c BOLD
 8  16..37  fg=#e6e6e6 bg=#21242c
 8  37..42  fg=#7f8492 bg=#21242c
 8  42..43  fg=#e6e6e6 bg=#21242c
 8  43..44  fg=#e6e6e6 bg=#181a20
 8  44..45  fg=#181a20 bg=#181a20
 9   0..1   fg=#181a20 bg=#181a20
 9   1..44  fg=#e6e6e6 bg=#181a20
 9  44..45  fg=#181a20 bg=#181a20
10   0..1   fg=#181a20 bg=#181a20
10   1..3   fg=#e6e6e6 bg=#181a20
10   3..42  fg=#e6e6e6 bg=#181a20 BOLD
10  42..44  fg=#e6e6e6 bg=#181a20
10  44..45  fg=#181a20 bg=#181a20
11   0..1   fg=#181a20 bg=#181a20
11   1..2   fg=#e6e6e6 bg=#181a20
11   2..3   fg=#7aa2f7 bg=#181a20
11   3..4   fg=#e6e6e6 bg=#181a20
11   4..5   fg=#7f8492 bg=#181a20
11   5..35  fg=#e6e6e6 bg=#181a20
11  35..42  fg=#7f8492 bg=#181a20
11  42..44  fg=#e6e6e6 bg=#181a20
11  44..45  fg=#181a20 bg=#181a20
12   0..1   fg=#181a20 bg=#181a20
12   1..44  fg=#e6e6e6 bg=#181a20
12  44..45  fg=#181a20 bg=#181a20
13   0..1   fg=#181a20 bg=#181a20
13   1..3   fg=#e6e6e6 bg=#181a20
13   3..42  fg=#7f8492 bg=#181a20
13  42..44  fg=#e6e6e6 bg=#181a20
13  44..45  fg=#181a20 bg=#181a20
14   0..1   fg=#181a20 bg=#181a20
14   1..44  fg=#e6e6e6 bg=#181a20
14  44..45  fg=#181a20 bg=#181a20
15   0..1   fg=#181a20 bg=#181a20
15   1..3   fg=#e6e6e6 bg=#181a20
15   3..8   fg=#e6e6e6 bg=#181a20 BOLD
15   8..15  fg=#7f8492 bg=#181a20
15  15..17  fg=#e6e6e6 bg=#181a20
15  17..20  fg=#e6e6e6 bg=#181a20 BOLD
15  20..26  fg=#7f8492 bg=#181a20
15  26..44  fg=#e6e6e6 bg=#181a20
15  44..45  fg=#181a20 bg=#181a20
16   0..1   fg=#181a20 bg=#181a20
16   1..44  fg=#e6e6e6 bg=#181a20
16  44..45  fg=#181a20 bg=#181a20
17   0..45  fg=#181a20 bg=#181a20
18   0..45  fg=#7f8492 bg=#111216
19   0..45  fg=#7f8492 bg=#111216
