crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__select-45-light-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind                                       |
|behind                                       |
|┌ switch · api ──────────────────────── esc ┐|
|│                                           │|
|│  search   cl                              │|
|│                                           │|
|│  same provider · conversation continues   │|
|│   ● claude-main                   5h 38%  │|
|│ ▶ ○ claude-alt                     5h 4%  │|
|│                                           │|
|│  other provider · replays the transcript  │|
|│   ○ codex-work                   day 91%  │|
|│                                           │|
|│  model: opus                              │|
|│                                           │|
|│  enter switch  esc close                  │|
|│                                           │|
|└───────────────────────────────────────────┘|
|behind                                       |
|behind                                       |

 0   0..45  fg=#6b6f7a bg=#ffffff
 1   0..45  fg=#6b6f7a bg=#ffffff
 2   0..2   fg=#f6f7f9 bg=#f6f7f9
 2   2..14  fg=#1c1c1c bg=#f6f7f9 BOLD
 2  14..39  fg=#f6f7f9 bg=#f6f7f9
 2  39..44  fg=#6b6f7a bg=#f6f7f9
 2  44..45  fg=#f6f7f9 bg=#f6f7f9
 3   0..1   fg=#f6f7f9 bg=#f6f7f9
 3   1..44  fg=#1c1c1c bg=#f6f7f9
 3  44..45  fg=#f6f7f9 bg=#f6f7f9
 4   0..1   fg=#f6f7f9 bg=#f6f7f9
 4   1..3   fg=#1c1c1c bg=#f6f7f9
 4   3..9   fg=#2f5bb7 bg=#f6f7f9 BOLD
 4   9..11  fg=#1c1c1c bg=#f6f7f9
 4  11..12  fg=#1c1c1c bg=#eceef2
 4  12..13  fg=#1c1c1c bg=#eceef2 REVERSED
 4  13..42  fg=#1c1c1c bg=#eceef2
 4  42..44  fg=#1c1c1c bg=#f6f7f9
 4  44..45  fg=#f6f7f9 bg=#f6f7f9
 5   0..1   fg=#f6f7f9 bg=#f6f7f9
 5   1..44  fg=#1c1c1c bg=#f6f7f9
 5  44..45  fg=#f6f7f9 bg=#f6f7f9
 6   0..1   fg=#f6f7f9 bg=#f6f7f9
 6   1..3   fg=#1c1c1c bg=#f6f7f9
 6   3..41  fg=#1c1c1c bg=#f6f7f9 BOLD
 6  41..44  fg=#1c1c1c bg=#f6f7f9
 6  44..45  fg=#f6f7f9 bg=#f6f7f9
 7   0..1   fg=#f6f7f9 bg=#f6f7f9
 7   1..2   fg=#1c1c1c bg=#f6f7f9
 7   2..3   fg=#2f5bb7 bg=#f6f7f9
 7   3..4   fg=#1c1c1c bg=#f6f7f9
 7   4..5   fg=#a86b00 bg=#f6f7f9
 7   5..36  fg=#1c1c1c bg=#f6f7f9
 7  36..42  fg=#6b6f7a bg=#f6f7f9
 7  42..44  fg=#1c1c1c bg=#f6f7f9
 7  44..45  fg=#f6f7f9 bg=#f6f7f9
 8   0..1   fg=#f6f7f9 bg=#f6f7f9
 8   1..2   fg=#1c1c1c bg=#f6f7f9
 8   2..3   fg=#2f5bb7 bg=#eceef2
 8   3..4   fg=#1c1c1c bg=#eceef2
 8   4..16  fg=#1c1c1c bg=#eceef2 BOLD
 8  16..37  fg=#1c1c1c bg=#eceef2
 8  37..42  fg=#6b6f7a bg=#eceef2
 8  42..43  fg=#1c1c1c bg=#eceef2
 8  43..44  fg=#1c1c1c bg=#f6f7f9
 8  44..45  fg=#f6f7f9 bg=#f6f7f9
 9   0..1   fg=#f6f7f9 bg=#f6f7f9
 9   1..44  fg=#1c1c1c bg=#f6f7f9
 9  44..45  fg=#f6f7f9 bg=#f6f7f9
10   0..1   fg=#f6f7f9 bg=#f6f7f9
10   1..3   fg=#1c1c1c bg=#f6f7f9
10   3..42  fg=#1c1c1c bg=#f6f7f9 BOLD
10  42..44  fg=#1c1c1c bg=#f6f7f9
10  44..45  fg=#f6f7f9 bg=#f6f7f9
11   0..1   fg=#f6f7f9 bg=#f6f7f9
11   1..2   fg=#1c1c1c bg=#f6f7f9
11   2..3   fg=#2f5bb7 bg=#f6f7f9
11   3..4   fg=#1c1c1c bg=#f6f7f9
11   4..5   fg=#6b6f7a bg=#f6f7f9
11   5..35  fg=#1c1c1c bg=#f6f7f9
11  35..42  fg=#6b6f7a bg=#f6f7f9
11  42..44  fg=#1c1c1c bg=#f6f7f9
11  44..45  fg=#f6f7f9 bg=#f6f7f9
12   0..1   fg=#f6f7f9 bg=#f6f7f9
12   1..44  fg=#1c1c1c bg=#f6f7f9
12  44..45  fg=#f6f7f9 bg=#f6f7f9
13   0..1   fg=#f6f7f9 bg=#f6f7f9
13   1..3   fg=#1c1c1c bg=#f6f7f9
13   3..42  fg=#6b6f7a bg=#f6f7f9
13  42..44  fg=#1c1c1c bg=#f6f7f9
13  44..45  fg=#f6f7f9 bg=#f6f7f9
14   0..1   fg=#f6f7f9 bg=#f6f7f9
14   1..44  fg=#1c1c1c bg=#f6f7f9
14  44..45  fg=#f6f7f9 bg=#f6f7f9
15   0..1   fg=#f6f7f9 bg=#f6f7f9
15   1..3   fg=#1c1c1c bg=#f6f7f9
15   3..8   fg=#1c1c1c bg=#f6f7f9 BOLD
15   8..15  fg=#6b6f7a bg=#f6f7f9
15  15..17  fg=#1c1c1c bg=#f6f7f9
15  17..20  fg=#1c1c1c bg=#f6f7f9 BOLD
15  20..26  fg=#6b6f7a bg=#f6f7f9
15  26..44  fg=#1c1c1c bg=#f6f7f9
15  44..45  fg=#f6f7f9 bg=#f6f7f9
16   0..1   fg=#f6f7f9 bg=#f6f7f9
16   1..44  fg=#1c1c1c bg=#f6f7f9
16  44..45  fg=#f6f7f9 bg=#f6f7f9
17   0..45  fg=#f6f7f9 bg=#f6f7f9
18   0..45  fg=#6b6f7a bg=#ffffff
19   0..45  fg=#6b6f7a bg=#ffffff
