crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__status-dots-ansi-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| ◉ needs you        |
| ✗ error            |
| ✓ done             |
| ● running          |
| ◌ waiting          |
| ○ idle             |
| ▪ archived         |
| → moved            |
| · unknown          |
| ◉ ✗ ✓ ● ◌ ○ ▪ → ·  |

 0   0..1   fg=Reset bg=Reset
 0   1..12  fg=Magenta bg=Reset BOLD
 0  12..20  fg=Reset bg=Reset
 1   0..1   fg=Reset bg=Reset
 1   1..8   fg=Red bg=Reset
 1   8..20  fg=Reset bg=Reset
 2   0..1   fg=Reset bg=Reset
 2   1..7   fg=Cyan bg=Reset
 2   7..20  fg=Reset bg=Reset
 3   0..1   fg=Reset bg=Reset
 3   1..10  fg=Yellow bg=Reset
 3  10..20  fg=Reset bg=Reset
 4   0..1   fg=Reset bg=Reset
 4   1..10  fg=Blue bg=Reset
 4  10..20  fg=Reset bg=Reset
 5   0..1   fg=Reset bg=Reset
 5   1..7   fg=DarkGray bg=Reset
 5   7..20  fg=Reset bg=Reset
 6   0..1   fg=Reset bg=Reset
 6   1..11  fg=DarkGray bg=Reset
 6  11..20  fg=Reset bg=Reset
 7   0..1   fg=Reset bg=Reset
 7   1..8   fg=Blue bg=Reset
 7   8..20  fg=Reset bg=Reset
 8   0..1   fg=Reset bg=Reset
 8   1..10  fg=DarkGray bg=Reset
 8  10..20  fg=Reset bg=Reset
 9   0..1   fg=Reset bg=Reset
 9   1..2   fg=Magenta bg=Reset BOLD
 9   2..3   fg=Reset bg=Reset
 9   3..4   fg=Red bg=Reset
 9   4..5   fg=Reset bg=Reset
 9   5..6   fg=Cyan bg=Reset
 9   6..7   fg=Reset bg=Reset
 9   7..8   fg=Yellow bg=Reset
 9   8..9   fg=Reset bg=Reset
 9   9..10  fg=Blue bg=Reset
 9  10..11  fg=Reset bg=Reset
 9  11..12  fg=DarkGray bg=Reset
 9  12..13  fg=Reset bg=Reset
 9  13..14  fg=DarkGray bg=Reset
 9  14..15  fg=Reset bg=Reset
 9  15..16  fg=Blue bg=Reset
 9  16..17  fg=Reset bg=Reset
 9  17..18  fg=DarkGray bg=Reset
 9  18..20  fg=Reset bg=Reset
