crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__status-dots-dark-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| ◉ needs you        |
| ✗ error            |
| ✓ done             |
| ● running          |
| ◌ waiting          |
| ○ idle             |
| ▪ archived         |
| → moved            |
| · unknown          |
| ◉ ✗ ✓ ● ◌ ○ ▪ → ·  |

 0   0..1   fg=#e6e6e6 bg=#111216
 0   1..12  fg=#e879c6 bg=#111216 BOLD
 0  12..20  fg=#e6e6e6 bg=#111216
 1   0..1   fg=#e6e6e6 bg=#111216
 1   1..8   fg=#f7768e bg=#111216
 1   8..20  fg=#e6e6e6 bg=#111216
 2   0..1   fg=#e6e6e6 bg=#111216
 2   1..7   fg=#7dcfff bg=#111216
 2   7..20  fg=#e6e6e6 bg=#111216
 3   0..1   fg=#e6e6e6 bg=#111216
 3   1..10  fg=#e0af68 bg=#111216
 3  10..20  fg=#e6e6e6 bg=#111216
 4   0..1   fg=#e6e6e6 bg=#111216
 4   1..10  fg=#6c8ebf bg=#111216
 4  10..20  fg=#e6e6e6 bg=#111216
 5   0..1   fg=#e6e6e6 bg=#111216
 5   1..7   fg=#7f8492 bg=#111216
 5   7..20  fg=#e6e6e6 bg=#111216
 6   0..1   fg=#e6e6e6 bg=#111216
 6   1..11  fg=#7f8492 bg=#111216
 6  11..20  fg=#e6e6e6 bg=#111216
 7   0..1   fg=#e6e6e6 bg=#111216
 7   1..8   fg=#6c8ebf bg=#111216
 7   8..20  fg=#e6e6e6 bg=#111216
 8   0..1   fg=#e6e6e6 bg=#111216
 8   1..10  fg=#7f8492 bg=#111216
 8  10..20  fg=#e6e6e6 bg=#111216
 9   0..1   fg=#e6e6e6 bg=#111216
 9   1..2   fg=#e879c6 bg=#111216 BOLD
 9   2..3   fg=#e6e6e6 bg=#111216
 9   3..4   fg=#f7768e bg=#111216
 9   4..5   fg=#e6e6e6 bg=#111216
 9   5..6   fg=#7dcfff bg=#111216
 9   6..7   fg=#e6e6e6 bg=#111216
 9   7..8   fg=#e0af68 bg=#111216
 9   8..9   fg=#e6e6e6 bg=#111216
 9   9..10  fg=#6c8ebf bg=#111216
 9  10..11  fg=#e6e6e6 bg=#111216
 9  11..12  fg=#7f8492 bg=#111216
 9  12..13  fg=#e6e6e6 bg=#111216
 9  13..14  fg=#7f8492 bg=#111216
 9  14..15  fg=#e6e6e6 bg=#111216
 9  15..16  fg=#6c8ebf bg=#111216
 9  16..17  fg=#e6e6e6 bg=#111216
 9  17..18  fg=#7f8492 bg=#111216
 9  18..20  fg=#e6e6e6 bg=#111216
