crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__status-dots-light-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| ! needs you        |
| x error            |
| v done             |
| * running          |
| ~ waiting          |
| o idle             |
| _ archived         |
| > moved            |
| . unknown          |
| ! x v * ~ o _ > .  |

 0   0..1   fg=#1c1c1c bg=#ffffff
 0   1..12  fg=#b0307f bg=#ffffff BOLD
 0  12..20  fg=#1c1c1c bg=#ffffff
 1   0..1   fg=#1c1c1c bg=#ffffff
 1   1..8   fg=#c4334b bg=#ffffff
 1   8..20  fg=#1c1c1c bg=#ffffff
 2   0..1   fg=#1c1c1c bg=#ffffff
 2   1..7   fg=#00739e bg=#ffffff
 2   7..20  fg=#1c1c1c bg=#ffffff
 3   0..1   fg=#1c1c1c bg=#ffffff
 3   1..10  fg=#a86b00 bg=#ffffff
 3  10..20  fg=#1c1c1c bg=#ffffff
 4   0..1   fg=#1c1c1c bg=#ffffff
 4   1..10  fg=#4a6fa5 bg=#ffffff
 4  10..20  fg=#1c1c1c bg=#ffffff
 5   0..1   fg=#1c1c1c bg=#ffffff
 5   1..7   fg=#6b6f7a bg=#ffffff
 5   7..20  fg=#1c1c1c bg=#ffffff
 6   0..1   fg=#1c1c1c bg=#ffffff
 6   1..11  fg=#6b6f7a bg=#ffffff
 6  11..20  fg=#1c1c1c bg=#ffffff
 7   0..1   fg=#1c1c1c bg=#ffffff
 7   1..8   fg=#4a6fa5 bg=#ffffff
 7   8..20  fg=#1c1c1c bg=#ffffff
 8   0..1   fg=#1c1c1c bg=#ffffff
 8   1..10  fg=#6b6f7a bg=#ffffff
 8  10..20  fg=#1c1c1c bg=#ffffff
 9   0..1   fg=#1c1c1c bg=#ffffff
 9   1..2   fg=#b0307f bg=#ffffff BOLD
 9   2..3   fg=#1c1c1c bg=#ffffff
 9   3..4   fg=#c4334b bg=#ffffff
 9   4..5   fg=#1c1c1c bg=#ffffff
 9   5..6   fg=#00739e bg=#ffffff
 9   6..7   fg=#1c1c1c bg=#ffffff
 9   7..8   fg=#a86b00 bg=#ffffff
 9   8..9   fg=#1c1c1c bg=#ffffff
 9   9..10  fg=#4a6fa5 bg=#ffffff
 9  10..11  fg=#1c1c1c bg=#ffffff
 9  11..12  fg=#6b6f7a bg=#ffffff
 9  12..13  fg=#1c1c1c bg=#ffffff
 9  13..14  fg=#6b6f7a bg=#ffffff
 9  14..15  fg=#1c1c1c bg=#ffffff
 9  15..16  fg=#4a6fa5 bg=#ffffff
 9  16..17  fg=#1c1c1c bg=#ffffff
 9  17..18  fg=#6b6f7a bg=#ffffff
 9  18..20  fg=#1c1c1c bg=#ffffff
